Move mobile navigation to external script

--- a/buscemi-group-site-all/404.html
+++ b/buscemi-group-site-all/404.html
@@ -31,7 +31,7 @@
       <a href="contact.html">Contact</a>
     </nav>
     <a class="btn" href="contact.html">Plan kennismaking</a>
-    <button class="burger" aria-label="Menu" onclick="document.querySelector('.nav-links').style.display = document.querySelector('.nav-links').style.display==='block'?'':'block'">☰</button>
+    <button class="burger" aria-label="Menu" aria-expanded="false">☰</button>
   </div>
 </header>
 
@@ -53,6 +53,7 @@
 </footer>
 <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 <script src="cookie.js"></script>
+<script src="nav.js"></script>
 
 </body>
 </html>
