--- a/buscemi-group-site-all/index.html
+++ b/buscemi-group-site-all/index.html
@@ -11,7 +11,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet"/>
 <link rel="stylesheet" href="style.css"/>
 <link rel="icon" type="image/png" href="assets/favicon.png"/>
-<meta property="og:image" content="/assets/og-image.png"/>
+<meta property="og:image" content="https://www.buscemigroup.be/assets/og-image.png"/>
+<meta property="og:title" content="Buscemi Group — KMO-expertise &amp; meetbare groei"/>
+<meta property="og:description" content="Marketing &amp; consultancy voor KMO's met meetbaar resultaat."/>
+<meta property="og:type" content="website"/>
+<meta property="og:url" content="https://www.buscemigroup.be/"/>
+<link rel="canonical" href="https://www.buscemigroup.be/"/>
 </head>
 <body>
 
