--- a/buscemi-group-site-all/insights/index.html
+++ b/buscemi-group-site-all/insights/index.html
@@ -11,7 +11,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet"/>
 <link rel="stylesheet" href="../style.css"/>
 <link rel="icon" type="image/png" href="../assets/favicon.png"/>
-<meta property="og:image" content="/assets/og-image.png"/>
+<meta property="og:image" content="https://www.buscemigroup.be/assets/og-image.png"/>
+<meta property="og:title" content="Insights — Buscemi Group"/>
+<meta property="og:description" content="Praktische tips en artikels — kort en toepasbaar."/>
+<meta property="og:type" content="website"/>
+<meta property="og:url" content="https://www.buscemigroup.be/insights/index.html"/>
+<link rel="canonical" href="https://www.buscemigroup.be/insights/index.html"/>
 </head>
 <body>
 
