--- a/buscemi-group-site-all/insights/social-strategie-30-min.html
+++ b/buscemi-group-site-all/insights/social-strategie-30-min.html
@@ -11,7 +11,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet"/>
 <link rel="stylesheet" href="../style.css"/>
 <link rel="icon" type="image/png" href="../assets/favicon.png"/>
-<meta property="og:image" content="/assets/og-image.png"/>
+<meta property="og:image" content="https://www.buscemigroup.be/assets/og-image.png"/>
+<meta property="og:title" content="Social strategie in 30 minuten per week — Buscemi Group"/>
+<meta property="og:description" content="Snel impact zonder fulltime social team: zo hou je structuur in 30 minuten per week."/>
+<meta property="og:type" content="article"/>
+<meta property="og:url" content="https://www.buscemigroup.be/insights/social-strategie-30-min.html"/>
+<link rel="canonical" href="https://www.buscemigroup.be/insights/social-strategie-30-min.html"/>
 </head>
 <body>
 
