--- a/buscemi-group-site-all/insights/template.html
+++ b/buscemi-group-site-all/insights/template.html
@@ -11,7 +11,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet"/>
 <link rel="stylesheet" href="../style.css"/>
 <link rel="icon" type="image/png" href="../assets/favicon.png"/>
-<meta property="og:image" content="/assets/og-image.png"/>
+<meta property="og:image" content="https://www.buscemigroup.be/assets/og-image.png"/>
+<meta property="og:title" content="{{title}} — Buscemi Group"/>
+<meta property="og:description" content="{{desc}}"/>
+<meta property="og:type" content="article"/>
+<meta property="og:url" content="{{url}}"/>
+<link rel="canonical" href="{{url}}"/>
 </head>
 <body>
 
