Switch to Netlify forms and improve accessibility

--- a/buscemi-group-site-all/contact.html
+++ b/buscemi-group-site-all/contact.html
@@ -47,7 +47,7 @@
   </section>
   <div class="content" style="padding:32px 0">
     <p>Vul het formulier in of gebruik de onderstaande gegevens om ons te bereiken.</p>
-    <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST" data-netlify="true" netlify-honeypot="bot-field" name="contact" style="margin-top:20px;max-width:560px">
+    <form method="POST" data-netlify="true" netlify-honeypot="bot-field" name="contact" style="margin-top:20px;max-width:560px">
       <input type="hidden" name="form-name" value="contact"/>
       <p style="display:none"><label>Laat dit veld leeg: <input name="bot-field"/></label></p>
       <div class="row">
