--- a/buscemi-group-site-all/legal.html
+++ b/buscemi-group-site-all/legal.html
@@ -47,9 +47,11 @@
   </section>
   <div class="content" style="padding:32px 0">
     <h3>Privacyverklaring</h3>
-    <p>We behandelen je persoonsgegevens zorgvuldig en enkel voor het doel waarvoor je ze hebt verstrekt (bv. contactname, offerte, samenwerking). Je hebt steeds recht op inzage, verbetering en verwijdering.</p>
+    <p>We behandelen je persoonsgegevens zorgvuldig. We verwerken enkel de gegevens die je zelf verstrekt, zoals naam en contactgegevens, en gebruiken die uitsluitend voor het beoogde doel (bijv. antwoord op je vraag, offerte of samenwerking).</p>
+    <p>Je gegevens worden niet gedeeld met derden, tenzij dit noodzakelijk is voor de uitvoering van onze diensten of om te voldoen aan een wettelijke verplichting.</p>
+    <p>Je hebt steeds recht op inzage, verbetering, beperking, overdracht en verwijdering van je gegevens. Stuur je verzoek naar <a href="mailto:info@buscemigroup.be">info@buscemigroup.be</a>.</p>
     <h3>Cookies</h3>
-    <p>Onze site gebruikt enkel functionele en analytische cookies. Je kan je voorkeuren aanpassen via je browserinstellingen.</p>
+    <p>Onze site gebruikt enkel functionele en analytische cookies. Via de cookiebanner kan je deze accepteren of weigeren. Je kan je voorkeuren later wijzigen via je browserinstellingen.</p>
     <h3>Algemene voorwaarden</h3>
     <p>We werken met duidelijke afspraken en transparante offertes. Specifieke voorwaarden worden bij aanvang van een project gedeeld.</p>
     <p class="muted" style="margin-top:24px">Deze pagina bevat algemene informatie en vormt geen juridisch advies.</p>
