--- a/buscemi-group-site-all/index.html
+++ b/buscemi-group-site-all/index.html
@@ -43,22 +43,22 @@
 <main id="top">
   <section class="hero">
     <div class="container grid-2">
-      <div>
-        <p class="kicker" style="letter-spacing:.18em;text-transform:uppercase;font-size:12px;color:#c9a227;font-weight:700">KMO expertise • Meetbare groei</p>
-        <h1>Marketing & Consultancy voor <span class="accent">ambitieuze KMO’s</span></h1>
-        <p>Wij helpen KMO’s groeien met heldere strategie en efficiënte uitvoering. We combineren praktijkervaring in KMO-management met marketingexpertise — ondersteund door data en AI waar het waarde toevoegt.</p>
-        <div style="display:flex;gap:12px;flex-wrap:wrap">
-          <a class="btn" href="contact.html">Vrijblijvend gesprek</a>
-          <a class="btn alt" href="diensten/index.html">Onze diensten</a>
+        <div>
+          <p class="kicker">KMO expertise • Meetbare groei</p>
+          <h1>Marketing & Consultancy voor <span class="accent">ambitieuze KMO’s</span></h1>
+          <p>Wij helpen KMO’s groeien met heldere strategie en efficiënte uitvoering. We combineren praktijkervaring in KMO-management met marketingexpertise — ondersteund door data en AI waar het waarde toevoegt.</p>
+          <div class="flex gap-12 flex-wrap">
+            <a class="btn" href="contact.html">Vrijblijvend gesprek</a>
+            <a class="btn alt" href="diensten/index.html">Onze diensten</a>
+          </div>
+          <div class="kpi">
+            <div class="card"><div class="val">Strategie & uitvoering</div><div class="label">Onder één dak</div></div>
+            <div class="card"><div class="val">Meetbare groei</div><div class="label">Heldere KPI’s</div></div>
+            <div class="card"><div class="val">KMO-expertise</div><div class="label">Praktisch & haalbaar</div></div>
+          </div>
         </div>
-        <div class="kpi">
-          <div class="card"><div class="val">Strategie & uitvoering</div><div class="label">Onder één dak</div></div>
-          <div class="card"><div class="val">Meetbare groei</div><div class="label">Heldere KPI’s</div></div>
-          <div class="card"><div class="val">KMO-expertise</div><div class="label">Praktisch & haalbaar</div></div>
-        </div>
-      </div>
-      <div class="card pad" aria-label="USP">
-        <h2 style="margin-top:0">Waarom Buscemi Group?</h2>
+        <div class="card pad" aria-label="USP">
+          <h2 class="mt-0">Waarom Buscemi Group?</h2>
         <p class="muted">Geen dure vrijblijvende adviezen, wel een partner die <span class="gold">meedenkt én meedoet</span>. Met AI-ondersteuning versnellen we analyses, contentproductie en optimalisaties — efficiënt en kwaliteitsvol.</p>
         <ul class="muted">
           <li>Strategie, creatie en performantie</li>
@@ -69,41 +69,41 @@
     </div>
   </section>
 
-  <section class="container" style="margin-top:10px">
+    <section class="container mt-10">
     <h2 class="center">Wat we doen</h2>
     <p class="sub center">Strategisch advies en marketing die meetbaar resultaat opleveren.</p>
-    <div class="grid-2" style="margin-top:24px">
+      <div class="grid-2 mt-24">
       <div class="card pad tile">
         <h3>Marketing</h3>
         <p>Van social media tot advertenties: we bouwen een consistente merkbeleving en campagnes die presteren.</p>
-        <p style="margin-top:12px"><a class="gold" href="diensten/marketing.html">Lees meer →</a></p>
+          <p class="mt-12"><a class="gold" href="diensten/marketing.html">Lees meer →</a></p>
       </div>
       <div class="card pad tile">
         <h3>Consultancy</h3>
         <p>Kostenoptimalisatie, strategie en efficiëntie — we vertalen inzichten naar een concreet groeiplan.</p>
-        <p style="margin-top:12px"><a class="gold" href="diensten/consultancy.html">Lees meer →</a></p>
+          <p class="mt-12"><a class="gold" href="diensten/consultancy.html">Lees meer →</a></p>
       </div>
     </div>
   </section>
 
-  <section class="container" style="margin-top:20px">
+    <section class="container mt-20">
     <h2 class="center">Onze aanpak</h2>
-    <div class="grid-3" style="margin-top:24px">
+      <div class="grid-3 mt-24">
       <div class="card pad tile"><h3>1. Analyse</h3><p>Quickscan van cijfers, kanalen en processen. We bepalen duidelijke doelstellingen.</p></div>
       <div class="card pad tile"><h3>2. Plan</h3><p>Roadmap met prioriteiten, KPI’s en budget. Snel waarde leveren staat centraal.</p></div>
       <div class="card pad tile"><h3>3. Uitvoering</h3><p>Implementatie, testing en continue optimalisatie. Heldere rapportering.</p></div>
     </div>
   </section>
 
-  <section class="container" style="margin-top:10px">
+    <section class="container mt-10">
     <h2 class="center">Wat klanten zeggen</h2>
-    <div class="card pad" style="max-width:760px;margin:24px auto;text-align:center">
+      <div class="card pad max-w-760 mx-auto my-24 text-center">
       <p><em>“Buscemi Group bracht structuur en focus. Binnen drie maanden zagen we duidelijke groei in leads én marge.”</em></p>
       <p class="muted">— Naam, CEO van Bedrijf X</p>
     </div>
   </section>
 
-  <section class="container" style="margin:60px auto">
+    <section class="container my-60 mx-auto">
     <div class="cta">
       <p><strong>Klaar om je bedrijf te laten groeien?</strong> Plan een kort kennismakingsgesprek.</p>
       <a class="btn" href="contact.html">Plan gesprek</a>
@@ -112,10 +112,10 @@
 </main>
 
 <footer>
-  <div class="container" style="display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap">
-    <div>© <span id="year"></span> Buscemi Group — Alle rechten voorbehouden</div>
-    <div class="muted"><a href="legal.html">Privacy</a> • <a href="legal.html">Cookies</a> • <a href="legal.html">Algemene voorwaarden</a></div>
-  </div>
+    <div class="container flex justify-between items-center gap-12 flex-wrap">
+      <div>© <span id="year"></span> Buscemi Group — Alle rechten voorbehouden</div>
+      <div class="muted"><a href="legal.html">Privacy</a> • <a href="legal.html">Cookies</a> • <a href="legal.html">Algemene voorwaarden</a></div>
+    </div>
 </footer>
 <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 <script src="cookie.js"></script>
