feat: improve index.html with skip link, Twitter meta tags, and corrected utilities path

--- a/buscemi-group-site-all/index.html
+++ b/buscemi-group-site-all/index.html
@@ -11,18 +11,24 @@
 <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet"/>
 <link rel="stylesheet" href="style.css"/>
 <!-- Nieuw: utilities.css voor nette layout-helpers en a11y -->
-<link rel="stylesheet" href="src/css/utilities.css"/>
+<l<link rel="stylesheet" href="../utilities.css"/>
 <link rel="icon" type="image/png" href="assets/favicon.png"/>
 <meta property="og:image" content="https://www.buscemigroup.be/assets/og-image.png"/>
 <meta property="og:title" content="Buscemi Group — KMO-expertise &amp; meetbare groei"/>
 <meta property="og:description" content="Marketing &amp; consultancy voor KMO's met meetbaar resultaat."/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://www.buscemigroup.be/"/>
-<link rel="canonical" href="https://www.buscemigroup.be/"/>
+      <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:title" content="Buscemi Group — KMO-expertise &amp; meetbare groei"/>
+    <meta name="twitter:description" content="Marketing &amp; consultancy voor KMO's met meetbaar resultaat."/>
+    <meta name="twitter:image" content="https://www.buscemigroup.be/assets/og-image.png"/>
+   
+  <link rel="canonical" href="https://www.buscemigroup.be/"/>
 </head>
 <body>
 
-<header>
+    <a href="#top" class="visually-hidden skip-link">Ga naar inhoud</a>
+  <header>
   <div class="container nav">
     <a class="brand" href="index.html"><img src="assets/logo.png" alt="Buscemi Group"/></a>
     <!-- Nieuw: burger class heb je al; aria-expanded is ok -->
