--- a/buscemi-group-site-all/index.html
+++ b/buscemi-group-site-all/index.html
@@ -187,7 +187,8 @@
   <!-- Scripts -->
   <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
   <script src="/cookie.js" defer></script>
-  <script src="/src/js/nav.js" defer></script>
+  <script src="/nav.js" defer></script>
+
 
   <div class="sticky-cta"><a class="btn" href="/contact.html">Plan kennismaking</a></div>
 
