--- a/buscemi-group-site-all/index.html
+++ b/buscemi-group-site-all/index.html
@@ -185,12 +185,12 @@
   </footer>
 
   <!-- Scripts -->
-  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
   <script src="/cookie.js" defer></script>
   <script src="/nav.js" defer></script>
 
 
   <div class="sticky-cta"><a class="btn" href="/contact.html">Plan kennismaking</a></div>
+  <span id="year"></span>
 
   <!-- No-JS fallback voor menu -->
   <noscript><style>[data-nav]{display:block!important}</style></noscript>
