--- a/legal.html
+++ b/legal.html
@@ -1,73 +1,234 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="nl-BE">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Juridisch — Buscemi Group</title>
-<meta name="description" content="Privacy, cookies en algemene voorwaarden."/>
-<meta name="theme-color" content="#0e4d38"/>
-<link rel="preconnect" href="https://fonts.googleapis.com"/>
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
-<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet"/>
-<link rel="stylesheet" href="style.css"/>
-<link rel="icon" type="image/png" href="assets/favicon.png"/>
-<meta property="og:image" content="https://www.buscemigroup.be/assets/og-image.png"/>
-<meta property="og:title" content="Juridisch — Buscemi Group"/>
-<meta property="og:description" content="Privacy, cookies en algemene voorwaarden."/>
-<meta property="og:type" content="website"/>
-<meta property="og:url" content="https://www.buscemigroup.be/legal.html"/>
-<link rel="canonical" href="https://www.buscemigroup.be/legal.html"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Privacy, Cookies & Voorwaarden | Buscemi Group</title>
+  <meta name="description" content="Privacyverklaring, cookiebeleid en algemene voorwaarden van Buscemi Group." />
+  <link rel="canonical" href="https://www.buscemigroup.be/legal.html" />
+  <meta name="theme-color" content="#0d1425" />
+
+  <!-- Fonts (optioneel, gelijk aan je site) -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet" />
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="/utilities.css" />
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Privacy, Cookies & Voorwaarden | Buscemi Group" />
+  <meta property="og:site_name" content="Buscemi Group" />
+  <meta property="og:description" content="Lees onze privacyverklaring, cookiebeleid en algemene voorwaarden." />
 </head>
 <body>
+  <a class="visually-hidden skip-link" href="#main">Ga naar hoofdinhoud</a>
 
-<header>
-  <div class="container nav">
-    <a class="brand" href="index.html"><img src="assets/logo.png" alt="Buscemi Group"/></a>
-    <nav class="nav-links" aria-label="Hoofdnavigatie">
-      <a href="over.html">Over</a>
-      <div class="dropdown">
-        <a href="diensten/index.html">Diensten ▾</a>
-        <div class="dropdown-content" role="menu">
-          <a href="diensten/marketing.html">Marketing</a>
-          <a href="diensten/consultancy.html">Consultancy</a>
-        </div>
+  <header class="site-header" role="banner">
+    <div class="container nav">
+      <a class="brand" href="/" aria-label="Buscemi Group home">
+        <img src="/assets/logo.png" alt="Buscemi Group" width="160" height="40" decoding="async" />
+      </a>
+      <nav class="nav-links" aria-label="Secundaire navigatie">
+        <ul class="menu">
+          <li><a href="/#contact">Contact</a></li>
+          <li><a href="/insights/">Insights</a></li>
+        </ul>
+      </nav>
+      <a class="btn primary-cta" href="/#contact">Plan kennismaking</a>
+    </div>
+  </header>
+
+  <main id="main">
+    <section class="container my-60">
+      <h1 class="center">Privacy, Cookies & Algemene Voorwaarden</h1>
+      <p class="sub center muted">Laatst bijgewerkt: 6 september 2025</p>
+
+      <div class="card pad max-w-760 mx-auto my-24">
+        <h2 class="mt-0">Inhoud</h2>
+        <ol>
+          <li><a href="#privacy">Privacyverklaring</a></li>
+          <li><a href="#cookies">Cookiebeleid</a></li>
+          <li><a href="#voorwaarden">Algemene Voorwaarden</a></li>
+          <li><a href="#bedrijfsinfo">Bedrijfsgegevens</a></li>
+        </ol>
       </div>
-      <a href="insights/index.html">Insights</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-    <a class="btn" href="contact.html">Plan kennismaking</a>
-    <button class="burger" aria-label="Menu" aria-expanded="false">☰</button>
-  </div>
-</header>
 
-<main class="container">
-  <section class="subpage-hero">
-    <h1>Juridisch</h1>
-    <p class="sub">Privacy, cookies en algemene voorwaarden</p>
-  </section>
-  <div class="content" style="padding:32px 0">
-    <h3>Privacyverklaring</h3>
-    <p>We behandelen je persoonsgegevens zorgvuldig. We verwerken enkel de gegevens die je zelf verstrekt, zoals naam en contactgegevens, en gebruiken die uitsluitend voor het beoogde doel (bijv. antwoord op je vraag, offerte of samenwerking).</p>
-    <p>Je gegevens worden niet gedeeld met derden, tenzij dit noodzakelijk is voor de uitvoering van onze diensten of om te voldoen aan een wettelijke verplichting.</p>
-    <p>Je hebt steeds recht op inzage, verbetering, beperking, overdracht en verwijdering van je gegevens. Stuur je verzoek naar <a href="mailto:info@buscemigroup.be">info@buscemigroup.be</a>.</p>
-    <h3>Cookies</h3>
-    <p>Onze site gebruikt enkel functionele en analytische cookies. Via de cookiebanner kan je deze accepteren of weigeren. Je kan je voorkeuren later wijzigen via je browserinstellingen.</p>
-    <h3>Algemene voorwaarden</h3>
-    <p>We werken met duidelijke afspraken en transparante offertes. Specifieke voorwaarden worden bij aanvang van een project gedeeld.</p>
-    <p class="muted" style="margin-top:24px">Deze pagina bevat algemene informatie en vormt geen juridisch advies.</p>
-  </div>
-</main>
+      <!-- PRIVACY -->
+      <section id="privacy" class="card pad max-w-860 mx-auto my-24">
+        <h2 class="mt-0">1. Privacyverklaring</h2>
+        <p><strong>Verwerkingsverantwoordelijke:</strong> Buscemi Group (hierna “wij”, “ons”).</p>
+        <p class="muted">We verwerken persoonsgegevens in overeenstemming met de GDPR/AVG en de Belgische privacywetgeving.</p>
 
-<footer>
-  <div class="container" style="display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap">
-    <div>© <span id="year"></span> Buscemi Group — Alle rechten voorbehouden</div>
-    <div class="muted"><a href="legal.html">Privacy</a> • <a href="legal.html">Cookies</a> • <a href="legal.html">Algemene voorwaarden</a></div>
-  </div>
-</footer>
-<script>document.getElementById('year').textContent = new Date().getFullYear();</script>
-<script src="cookie.js"></script>
-<script src="nav.js"></script>
+        <h3>1.1 Welke gegevens verzamelen we?</h3>
+        <ul>
+          <li><strong>Contactgegevens:</strong> naam, e-mail, telefoon, bedrijfsnaam, bericht (via formulieren of e-mail).</li>
+          <li><strong>Websitegegevens:</strong> IP (verkort/anoniem indien ingesteld), device/browser info, bezochte pagina’s (zie ook Cookiebeleid).</li>
+          <li><strong>Zakelijke gegevens:</strong> facturatie- en contractgegevens wanneer je klant wordt.</li>
+        </ul>
 
-<div class="sticky-cta"><a class="btn" href="contact.html">Plan gesprek</a></div>
+        <h3>1.2 Doeleinden & rechtsgronden</h3>
+        <ul>
+          <li><strong>Beantwoorden van vragen en offertes</strong> (gerechtvaardigd belang / pre-contractueel).</li>
+          <li><strong>Uitvoering van de overeenkomst</strong> (leveren van diensten, facturatie).</li>
+          <li><strong>Verbeteren van onze website en diensten</strong> (gerechtvaardigd belang; waar nodig met toestemming via cookies).</li>
+          <li><strong>Wettelijke verplichtingen</strong> (bv. fiscale bewaring).</li>
+        </ul>
+
+        <h3>1.3 Bewaartermijnen</h3>
+        <ul>
+          <li>Contactaanvragen: max. 24 maanden na laatste contact.</li>
+          <li>Contract- en facturatiegegevens: wettelijk tot 7 of 10 jaar (boekhouding).</li>
+          <li>Analyticsgegevens: conform cookie-instellingen (zie Cookiebeleid).</li>
+        </ul>
+
+        <h3>1.4 Ontvangers</h3>
+        <p>We delen gegevens enkel indien nodig met verwerkers/leveranciers (hosting, e-mail, analytics). Zij handelen volgens onze instructies en sluiten een verwerkersovereenkomst af.</p>
+        <ul>
+          <li><strong>Hosting:</strong> ⚠️ vul hostingpartij in</li>
+          <li><strong>E-mail/Collaboration:</strong> ⚠️ vul provider in</li>
+          <li><strong>Analytics:</strong> Plausible (cookieloos indien geconfigureerd) of alternatief ⚠️</li>
+        </ul>
+
+        <h3>1.5 Internationale doorgifte</h3>
+        <p>Indien gegevens buiten de EER worden verwerkt, zorgen we voor passende waarborgen (bijv. EU-modelclausules). Details op verzoek.</p>
+
+        <h3>1.6 Jouw rechten</h3>
+        <ul>
+          <li>Recht op inzage, rectificatie, wissing en beperking.</li>
+          <li>Recht op overdraagbaarheid en bezwaar (o.a. tegen direct marketing/analytics).</li>
+          <li>Recht om je toestemming in te trekken (met effect voor de toekomst).</li>
+        </ul>
+        <p>Je kan je rechten uitoefenen via <a href="mailto:info@buscemigroup.be">info@buscemigroup.be</a>. We reageren binnen 30 dagen.</p>
+        <p>Klacht indienen kan bij de Gegevensbeschermingsautoriteit (België).</p>
+
+        <h3>1.7 Beveiliging</h3>
+        <p>We nemen passende technische en organisatorische maatregelen om persoonsgegevens te beschermen (toegangsbeheer, versleuteling waar passend, least-privilege, back-ups).</p>
+
+        <h3>1.8 Contact</h3>
+        <p>E-mail: <a href="mailto:info@buscemigroup.be">info@buscemigroup.be</a><br>
+           Tel: <a href="tel:+324XXXXXXXX">+32 4X XX XX XXX</a><br>
+           DPO (indien van toepassing): ⚠️ naam/e-mail</p>
+      </section>
+
+      <!-- COOKIES -->
+      <section id="cookies" class="card pad max-w-860 mx-auto my-24">
+        <h2 class="mt-0">2. Cookiebeleid</h2>
+        <p>We gebruiken cookies en gelijkaardige technologieën om onze site te laten werken en te verbeteren. Je kan je voorkeuren beheren.</p>
+
+        <div class="flex gap-12 flex-wrap">
+          <button class="btn" id="manage-consent">Beheer cookievoorkeuren</button>
+          <a class="btn alt" href="/">Terug naar home</a>
+        </div>
+
+        <h3>2.1 Wat zijn cookies?</h3>
+        <p>Cookies zijn kleine bestanden die bij een bezoek op je toestel worden geplaatst. Sommige zijn essentieel, andere zijn optioneel (bv. analytics).</p>
+
+        <h3>2.2 Welke cookies gebruiken we?</h3>
+        <div class="tile mt-12">
+          <h4>Noodzakelijk (altijd actief)</h4>
+          <p class="muted">Voor basisfunctionaliteit zoals navigatie, beveiliging en formulierverwerking. Deze cookies verzamelen geen marketingdata.</p>
+          <ul>
+            <li><strong>Netlify/hosting</strong> — technische/veiligheidscookies (sessie/CSRF). Duur: sessie tot enkele dagen.</li>
+          </ul>
+        </div>
+
+        <div class="tile mt-12">
+          <h4>Analytics (toestemming indien nodig)</h4>
+          <p class="muted">We streven naar cookieloze, privacyvriendelijke meting. Indien cookies of profiling worden gebruikt, vragen we toestemming.</p>
+          <ul>
+            <li><strong>Plausible</strong> — cookieloos mogelijk. Duur: geen cookie of kort; IP eventueel geanonimiseerd. ⚠️ Bevestig je configuratie.</li>
+          </ul>
+        </div>
+
+        <h3>2.3 Consent & beheer</h3>
+        <p>Bij je eerste bezoek vragen we toestemming voor optionele cookies. Je kan deze keuze op elk moment aanpassen via “Beheer cookievoorkeuren”.</p>
+
+        <h3>2.4 Wijzigingen</h3>
+        <p>We kunnen dit beleid updaten. Raadpleeg deze pagina voor de laatste versie.</p>
+      </section>
+
+      <!-- VOORWAARDEN -->
+      <section id="voorwaarden" class="card pad max-w-860 mx-auto my-24">
+        <h2 class="mt-0">3. Algemene Voorwaarden</h2>
+        <h3>3.1 Toepasselijkheid</h3>
+        <p>Deze voorwaarden zijn van toepassing op al onze offertes, overeenkomsten en diensten, tenzij schriftelijk anders overeengekomen.</p>
+
+        <h3>3.2 Offertes & opdrachten</h3>
+        <ul>
+          <li>Offertes zijn 30 dagen geldig, tenzij anders vermeld.</li>
+          <li>Een opdracht start na schriftelijke/e-mailbevestiging en akkoord met scope, planning en prijs.</li>
+        </ul>
+
+        <h3>3.3 Prijzen & betaling</h3>
+        <ul>
+          <li>Prijzen excl. btw, tenzij anders vermeld.</li>
+          <li>Betalingstermijn: 14 dagen na factuurdatum, tenzij anders overeengekomen.</li>
+          <li>Laattijdige betaling kan aanleiding geven tot vertragingsinteresten en administratieve kosten.</li>
+        </ul>
+
+        <h3>3.4 Wijzigingen & meerwerk</h3>
+        <p>Aanpassingen buiten de overeengekomen scope worden als meerwerk gefactureerd na voorafgaand akkoord.</p>
+
+        <h3>3.5 Intellectueel eigendom</h3>
+        <p>Alle rechten op concepten, ontwerpen, code en content blijven bij ons, tenzij uitdrukkelijk overgedragen na volledige betaling.</p>
+
+        <h3>3.6 Aansprakelijkheid</h3>
+        <p>Wij zijn niet aansprakelijk voor indirecte schade of gevolgschade. Onze totale aansprakelijkheid is beperkt tot het bedrag van de betreffende opdracht/factuur, tenzij dwingend recht anders bepaalt.</p>
+
+        <h3>3.7 Vertrouwelijkheid & data</h3>
+        <p>Partijen behandelen vertrouwelijke informatie strikt vertrouwelijk. Persoonsgegevens worden verwerkt conform onze privacyverklaring.</p>
+
+        <h3>3.8 Duur & beëindiging</h3>
+        <p>Opzegging kan schriftelijk met redelijke opzegtermijn; reeds geleverde prestaties en kosten worden verrekend.</p>
+
+        <h3>3.9 Toepasselijk recht & forum</h3>
+        <p>Belgisch recht is van toepassing. Geschillen behoren tot de exclusieve bevoegdheid van de rechtbanken van ⚠️ jouw arrondissement.</p>
+      </section>
+
+      <!-- BEDRIJFSINFO -->
+      <section id="bedrijfsinfo" class="card pad max-w-860 mx-auto my-24">
+        <h2 class="mt-0">4. Bedrijfsgegevens</h2>
+        <p><strong>Buscemi Group</strong><br>
+           ⚠️ Straat + nr<br>
+           ⚠️ Postcode + Gemeente, België<br>
+           KBO/BTW: ⚠️ BE 0XXX.XXX.XXX<br>
+           E-mail: <a href="mailto:info@buscemigroup.be">info@buscemigroup.be</a><br>
+           Tel: <a href="tel:+324XXXXXXXX">+32 4X XX XX XXX</a></p>
+      </section>
+
+      <p class="muted center max-w-760 mx-auto">Deze pagina is bedoeld om transparantie te bieden. Dit document vormt geen juridisch advies; stem de inhoud af op je concrete werking.</p>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <div class="container flex justify-between items-center gap-12 flex-wrap">
+      <div>© <span id="year"></span> Buscemi Group — Alle rechten voorbehouden</div>
+      <div class="muted">
+        <a href="/legal.html" aria-current="page">Privacy & Voorwaarden</a>
+      </div>
+    </div>
+  </footer>
+
+  <!-- Scripts -->
+  <script src="/cookie.js" defer></script>
+  <script>
+    (function(){
+      var y=document.getElementById('year'); if(y) y.textContent=new Date().getFullYear();
+
+      // Hook: open het consent-paneel via je cookie.js
+      // Zorg dat cookie.js luistert naar #manage-consent (bijv. open modal/opties)
+      var btn=document.getElementById('manage-consent');
+      if(btn && window.cookieConsent && typeof window.cookieConsent.open==='function'){
+        btn.addEventListener('click', function(){ window.cookieConsent.open(); });
+      } else if(btn){
+        btn.addEventListener('click', function(){
+          alert('Het beheer van cookievoorkeuren wordt door je cookie-banner geregeld. Koppel #manage-consent in cookie.js.');
+        });
+      }
+    }());
+  </script>
 </body>
 </html>
