--- a/diensten/marketing.html
+++ b/diensten/marketing.html
@@ -1,86 +1,120 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="nl-BE">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Marketing — Buscemi Group</title>
-<meta name="description" content="Socials, ads, branding & retail experience"/>
-<meta name="theme-color" content="#0e4d38"/>
-<link rel="preconnect" href="https://fonts.googleapis.com"/>
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
-<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet"/>
-<link rel="stylesheet" href="../style.css"/>
-<link rel="icon" type="image/png" href="../assets/favicon.png"/>
-<meta property="og:image" content="https://www.buscemigroup.be/assets/og-image.png"/>
-<meta property="og:title" content="Marketing — Buscemi Group"/>
-<meta property="og:description" content="Socials, ads, branding &amp; retail experience"/>
-<meta property="og:type" content="website"/>
-<meta property="og:url" content="https://www.buscemigroup.be/diensten/marketing.html"/>
-<link rel="canonical" href="https://www.buscemigroup.be/diensten/marketing.html"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Marketing voor KMO’s | Buscemi Group</title>
+  <meta name="description" content="Van social media tot advertenties: wij zorgen voor consistente marketing die meetbare resultaten oplevert voor KMO’s." />
+  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="/utilities.css" />
 </head>
 <body>
+  <a class="visually-hidden skip-link" href="#main">Ga naar hoofdinhoud</a>
 
-<header>
-  <div class="container nav">
-    <a class="brand" href="../index.html"><img src="../assets/logo.png" alt="Buscemi Group"/></a>
-    <nav class="nav-links" aria-label="Hoofdnavigatie">
-      <a href="../over.html">Over</a>
-      <div class="dropdown">
-        <a href="../diensten/index.html">Diensten ▾</a>
-        <div class="dropdown-content" role="menu">
-          <a href="../diensten/marketing.html">Marketing</a>
-          <a href="../diensten/consultancy.html">Consultancy</a>
+  <header class="site-header">
+    <div class="container nav">
+      <a class="brand" href="/" aria-label="Buscemi Group home">
+        <img src="/assets/logo.png" alt="Buscemi Group" width="160" height="40" />
+      </a>
+      <a class="btn primary-cta" href="/#contact">Plan kennismaking</a>
+    </div>
+  </header>
+
+  <main id="main">
+    <!-- HERO -->
+    <section class="hero container">
+      <div class="grid-2">
+        <div>
+          <h1>Marketing die <span class="accent">resultaat oplevert</span></h1>
+          <p>We bouwen een consistente merkbeleving en campagnes die werken. Geen losse posts of advertenties zonder plan — wel marketing die groei en leads oplevert.</p>
+          <a class="btn" href="/#contact">Plan kennismaking</a>
         </div>
       </div>
-      <a href="../insights/index.html">Insights</a>
-      <a href="../contact.html">Contact</a>
-    </nav>
-    <a class="btn" href="../contact.html">Plan kennismaking</a>
-    <button class="burger" aria-label="Menu" aria-expanded="false">☰</button>
-  </div>
-</header>
+    </section>
 
-<main class="container">
-  <section class="subpage-hero">
-    <h1>Marketing</h1>
-    <p class="sub">Socials, ads, branding & retail experience — always on brand, always op resultaat.</p>
-  </section>
-  <div class="content" style="padding:32px 0">
-    <div class="grid-3">
-      <div class="card pad tile"><h3>Socials & Content</h3><p>Beheer en creatie voor TikTok, Instagram, Facebook en LinkedIn — inclusief korte video, beeld en copy.</p></div>
-      <div class="card pad tile"><h3>Ads & Performance</h3><p>Meta, Google (Search/Display/YouTube), retargeting en conversietracking. Heldere KPI’s en rapportering.</p></div>
-      <div class="card pad tile"><h3>Branding & Retail</h3><p>Merkfundamenten, huisstijl en touchpoints in showroom of winkel. Consistente merkbeleving.</p></div>
-    </div>
-    <h3 style="margin-top:40px">Onze aanpak</h3>
-    <div class="steps">
-      <div class="step"><strong>Audit</strong> — kanalen, creative en tracking. We bepalen quick wins.</div>
-      <div class="step"><strong>Plan</strong> — contentkalender, mediaplan en KPI’s.</div>
-      <div class="step"><strong>Run</strong> — creatie, publicatie en campagnesturing.</div>
-      <div class="step"><strong>Optimaliseer</strong> — A/B-tests, learnings en schaalbare formats.</div>
-    </div>
-    <h3 style="margin-top:32px">Wat je mag verwachten</h3>
-    <ul>
-      <li>Consistente merkuitstraling en tone of voice</li>
-      <li>Meetbare groei in bereik, engagement en conversies</li>
-      <li>Maandrapport met duidelijke inzichten en next steps</li>
-    </ul>
-    <div class="cta" style="margin-top:36px">
-      <p><strong>Wil je je marketing structureren en laten presteren?</strong></p>
-      <a class="btn" href="../contact.html">Plan een gesprek</a>
-    </div>
-  </div>
-</main>
+    <!-- PROBLEEM & AANPAK -->
+    <section class="container mt-20">
+      <h2>Jouw uitdaging</h2>
+      <p>Veel KMO’s investeren tijd en budget in marketing, maar zien weinig rendement. Versnipperde acties zonder strategie leiden zelden tot duurzame groei.</p>
 
-<footer>
-  <div class="container" style="display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap">
-    <div>© <span id="year"></span> Buscemi Group — Alle rechten voorbehouden</div>
-    <div class="muted"><a href="../legal.html">Privacy</a> • <a href="../legal.html">Cookies</a> • <a href="../legal.html">Algemene voorwaarden</a></div>
-  </div>
-</footer>
-<script>document.getElementById('year').textContent = new Date().getFullYear();</script>
-<script src="../cookie.js"></script>
-<script src="../nav.js"></script>
+      <h2 class="mt-20">Onze aanpak</h2>
+      <ul class="grid-3 mt-12">
+        <li class="card pad tile"><h3>1. Analyse</h3><p>We bekijken je huidige kanalen, doelgroep en resultaten.</p></li>
+        <li class="card pad tile"><h3>2. Plan</h3><p>We bouwen een roadmap met prioriteiten, doelstellingen en budget.</p></li>
+        <li class="card pad tile"><h3>3. Uitvoering</h3><p>We voeren campagnes uit, testen en optimaliseren continu.</p></li>
+      </ul>
+    </section>
 
-<div class="sticky-cta"><a class="btn" href="../contact.html">Plan gesprek</a></div>
+    <!-- DELIVERABLES -->
+    <section class="container mt-20">
+      <h2>Wat je krijgt</h2>
+      <ul class="grid-2 mt-12">
+        <li class="card pad">Contentkalender en campagneplanning</li>
+        <li class="card pad">Consistente merkpositionering</li>
+        <li class="card pad">Social media posts en advertenties</li>
+        <li class="card pad">Maandelijkse rapportage en verbeteracties</li>
+      </ul>
+    </section>
+
+    <!-- DOORLOOPTIJD & PRIJS -->
+    <section class="container mt-20">
+      <h2>Praktisch</h2>
+      <p><strong>Doorlooptijd:</strong> eerste resultaten binnen 2–3 maanden.<br>
+         <strong>Prijsindicatie:</strong> vanaf €1.500/maand (afhankelijk van scope en kanalen).</p>
+    </section>
+
+    <!-- MINI-CASE -->
+    <section class="container mt-20">
+      <h2>Case in de kijker</h2>
+      <figure class="card pad max-w-760 mx-auto text-center">
+        <blockquote>
+          <p><em>“Na 3 maanden zagen we +40% meer kwalitatieve leads via social media en campagnes. De rapportage gaf ons houvast om verder te groeien.”</em></p>
+        </blockquote>
+        <figcaption class="muted">— CEO van een Belgische KMO</figcaption>
+      </figure>
+    </section>
+
+    <!-- FAQ -->
+    <section class="container mt-20">
+      <h2>Veelgestelde vragen</h2>
+      <div class="grid-2 mt-12">
+        <div class="card pad">
+          <h3>Hoe snel zien we resultaat?</h3>
+          <p>Meestal binnen 2–3 maanden, afhankelijk van je startpositie en sector.</p>
+        </div>
+        <div class="card pad">
+          <h3>Werken jullie met contracten?</h3>
+          <p>We starten meestal met een proefperiode van 3 maanden. Daarna verlengen we flexibel per kwartaal.</p>
+        </div>
+        <div class="card pad">
+          <h3>Moeten wij zelf content aanleveren?</h3>
+          <p>We werken samen: wij creëren en optimaliseren, jij geeft input en feedback.</p>
+        </div>
+        <div class="card pad">
+          <h3>Is dit ook geschikt voor kleine KMO’s?</h3>
+          <p>Ja, we stemmen de scope af op je budget en prioriteiten. Vanaf €1.500/maand.</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- CONTACT CTA -->
+    <section class="container my-60">
+      <div class="cta center">
+        <p><strong>Klaar om je marketing op de rails te zetten?</strong></p>
+        <a class="btn" href="/#contact">Plan kennismaking</a>
+      </div>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <div class="container flex justify-between items-center gap-12 flex-wrap">
+      <div>© <span id="year"></span> Buscemi Group</div>
+      <div class="muted"><a href="/legal.html">Privacy & Voorwaarden</a></div>
+    </div>
+  </footer>
+
+  <script>
+    (function(){var y=document.getElementById("year");if(y)y.textContent=new Date().getFullYear();})();
+  </script>
 </body>
 </html>
