--- a/diensten/consultancy.html
+++ b/diensten/consultancy.html
@@ -1,87 +1,142 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="nl-BE">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Consultancy — Buscemi Group</title>
-<meta name="description" content="Kostenefficiëntie, strategie & operationele verbetering"/>
-<meta name="theme-color" content="#0e4d38"/>
-<link rel="preconnect" href="https://fonts.googleapis.com"/>
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
-<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet"/>
-<link rel="stylesheet" href="../style.css"/>
-<link rel="icon" type="image/png" href="../assets/favicon.png"/>
-<meta property="og:image" content="https://www.buscemigroup.be/assets/og-image.png"/>
-<meta property="og:title" content="Consultancy — Buscemi Group"/>
-<meta property="og:description" content="Kostenefficiëntie, strategie &amp; operationele verbetering"/>
-<meta property="og:type" content="website"/>
-<meta property="og:url" content="https://www.buscemigroup.be/diensten/consultancy.html"/>
-<link rel="canonical" href="https://www.buscemigroup.be/diensten/consultancy.html"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Consultancy voor KMO’s | Buscemi Group</title>
+  <meta name="description" content="Praktische consultancy voor KMO’s: kostenoptimalisatie, strategie en efficiëntere processen. Snel resultaat met een haalbaar plan en duidelijke KPI’s." />
+  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="/utilities.css" />
+
+  <!-- Open Graph (optioneel) -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Consultancy voor KMO’s | Buscemi Group" />
+  <meta property="og:description" content="Kostenoptimalisatie, strategie en efficiëntere processen voor KMO’s. Snel resultaat met een haalbaar plan en duidelijke KPI’s." />
 </head>
 <body>
+  <a class="visually-hidden skip-link" href="#main">Ga naar hoofdinhoud</a>
 
-<header>
-  <div class="container nav">
-    <a class="brand" href="../index.html"><img src="../assets/logo.png" alt="Buscemi Group"/></a>
-    <nav class="nav-links" aria-label="Hoofdnavigatie">
-      <a href="../over.html">Over</a>
-      <div class="dropdown">
-        <a href="../diensten/index.html">Diensten ▾</a>
-        <div class="dropdown-content" role="menu">
-          <a href="../diensten/marketing.html">Marketing</a>
-          <a href="../diensten/consultancy.html">Consultancy</a>
+  <header class="site-header">
+    <div class="container nav">
+      <a class="brand" href="/" aria-label="Buscemi Group home">
+        <img src="/assets/logo.png" alt="Buscemi Group" width="160" height="40" />
+      </a>
+      <a class="btn primary-cta" href="/#contact">Plan kennismaking</a>
+    </div>
+  </header>
+
+  <main id="main">
+    <!-- HERO -->
+    <section class="hero container">
+      <div class="grid-2">
+        <div>
+          <h1>Consultancy die <span class="accent">rust en rendement</span> brengt</h1>
+          <p>We helpen KMO’s om heldere keuzes te maken: <strong>kosten omlaag</strong>, <strong>processen strakker</strong> en <strong>strategie scherp</strong>. Geen dikke rapporten die in de kast verdwijnen, wel een plan dat je meteen kan uitvoeren.</p>
+          <a class="btn" href="/#contact">Plan kennismaking</a>
         </div>
       </div>
-      <a href="../insights/index.html">Insights</a>
-      <a href="../contact.html">Contact</a>
-    </nav>
-    <a class="btn" href="../contact.html">Plan kennismaking</a>
-    <button class="burger" aria-label="Menu" aria-expanded="false">☰</button>
-  </div>
-</header>
+    </section>
 
-<main class="container">
-  <section class="subpage-hero">
-    <h1>Consultancy</h1>
-    <p class="sub">Kostenefficiëntie, strategie & operationele verbetering — met een plan dat uitgevoerd wórdt.</p>
-  </section>
-  <div class="content" style="padding:32px 0">
-    <h3>Wat we doen</h3>
-    <ul>
-      <li>Kostenanalyse en optimalisatie (cashflow, marge, media-spend)</li>
-      <li>Strategie en positionering (propositie, doelgroep, kanalen)</li>
-      <li>Operationele efficiëntie en procesverbetering</li>
-    </ul>
-    <h3 style="margin-top:24px">Onze aanpak</h3>
-    <ol>
-      <li><strong>Analyse:</strong> cijfers, processen en marktbenchmarks.</li>
-      <li><strong>Plan:</strong> prioriteiten, roadmap en meetbare doelen.</li>
-      <li><strong>Uitvoering:</strong> we coördineren en implementeren.</li>
-      <li><strong>Rapportering:</strong> dashboards, learnings en opvolging.</li>
-    </ol>
-    <h3 style="margin-top:24px">Resultaat</h3>
-    <ul>
-      <li>Heldere winst- en kostenhefbomen</li>
-      <li>Snelle quick wins + duurzame verbeteringen</li>
-      <li>Team aligned op KPI’s en verantwoordelijkheden</li>
-    </ul>
-    <div class="cta" style="margin-top:36px">
-      <p><strong>Zoek je concrete stappen richting meer marge en efficiëntie?</strong></p>
-      <a class="btn" href="../contact.html">Plan een gesprek</a>
+    <!-- PROBLEEM & AANPAK -->
+    <section class="container mt-20">
+      <h2>Waar je vandaag tegenaan loopt</h2>
+      <ul class="grid-2 mt-12">
+        <li class="card pad">Kosten blijven stijgen, maar de marge groeit niet mee.</li>
+        <li class="card pad">Veel projecten tegelijk, weinig focus en prioriteit.</li>
+        <li class="card pad">Geen eenduidige KPI’s of structuur in rapportering.</li>
+        <li class="card pad">Processen zijn historisch gegroeid en zorgen voor vertraging.</li>
+      </ul>
+
+      <h2 class="mt-20">Onze aanpak</h2>
+      <ul class="grid-3 mt-12">
+        <li class="card pad tile">
+          <h3>1. Quickscan</h3>
+          <p>Inzicht in cijfers, processen en teams. We benoemen de grootste hefbomen en quick wins.</p>
+        </li>
+        <li class="card pad tile">
+          <h3>2. Roadmap</h3>
+          <p>Praktisch plan met prioriteiten, KPI’s, eigenaars en timing. Gericht op haalbare impact.</p>
+        </li>
+        <li class="card pad tile">
+          <h3>3. Implementatie</h3>
+          <p>We begeleiden de uitvoering, bewaken voortgang en sturen bij waar nodig.</p>
+        </li>
+      </ul>
+    </section>
+
+    <!-- DELIVERABLES -->
+    <section class="container mt-20">
+      <h2>Wat je krijgt</h2>
+      <ul class="grid-2 mt-12">
+        <li class="card pad">Kostenanalyse met besparingspistes per rubriek/leverancier</li>
+        <li class="card pad">Heldere KPI-set en maandelijkse rapportage</li>
+        <li class="card pad">Procesoptimalisaties en rolverdeling</li>
+        <li class="card pad">Roadmap met concrete acties, budget en planning</li>
+      </ul>
+    </section>
+
+    <!-- DOORLOOPTIJD & PRIJS -->
+    <section class="container mt-20">
+      <h2>Praktisch</h2>
+      <p>
+        <strong>Doorlooptijd:</strong> quickscan en roadmap in 4–6 weken; eerste resultaten binnen 30–60 dagen.<br>
+        <strong>Samenwerking:</strong> traject op maat met vaste milestones en rapportering.<br>
+        <strong>Prijsindicatie:</strong> vanaf €1.800/dag of trajectprijs op maat (na intake).
+      </p>
+    </section>
+
+    <!-- MINI-CASE -->
+    <section class="container mt-20">
+      <h2>Case in de kijker</h2>
+      <figure class="card pad max-w-760 mx-auto text-center">
+        <blockquote>
+          <p><em>“Door de quickscan en roadmap konden we binnen twee maanden de operationele kosten verlagen en de doorlooptijd halveren. Eindelijk weer focus en zicht op de juiste KPI’s.”</em></p>
+        </blockquote>
+        <figcaption class="muted">— Zaakvoerder van een Belgische KMO</figcaption>
+      </figure>
+    </section>
+
+    <!-- FAQ -->
+    <section class="container mt-20">
+      <h2>Veelgestelde vragen</h2>
+      <div class="grid-2 mt-12">
+        <div class="card pad">
+          <h3>Wat hebben jullie nodig voor de quickscan?</h3>
+          <p>Basisfinanciën (marge/omzet per segment), contracten met leveranciers, een procesoverzicht en toegang tot je rapportage (indien aanwezig).</p>
+        </div>
+        <div class="card pad">
+          <h3>Werken jullie on-site of remote?</h3>
+          <p>We combineren beide. Workshops en kick-offs doen we graag on-site; opvolging kan efficiënt remote.</p>
+        </div>
+        <div class="card pad">
+          <h3>Hoe borgen we vertrouwelijkheid?</h3>
+          <p>We tekenen desgewenst een NDA. Gegevens worden enkel gebruikt voor het traject en veilig bewaard.</p>
+        </div>
+        <div class="card pad">
+          <h3>Kunnen we klein starten?</h3>
+          <p>Ja. We starten vaak met een compacte quickscan. Bevalt de samenwerking, dan rollen we door naar implementatie.</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- CONTACT CTA -->
+    <section class="container my-60">
+      <div class="cta center">
+        <p><strong>Klaar voor meer rust en rendement?</strong></p>
+        <a class="btn" href="/#contact">Plan kennismaking</a>
+      </div>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <div class="container flex justify-between items-center gap-12 flex-wrap">
+      <div>© <span id="year"></span> Buscemi Group</div>
+      <div class="muted"><a href="/legal.html">Privacy & Voorwaarden</a></div>
     </div>
-  </div>
-</main>
+  </footer>
 
-<footer>
-  <div class="container" style="display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap">
-    <div>© <span id="year"></span> Buscemi Group — Alle rechten voorbehouden</div>
-    <div class="muted"><a href="../legal.html">Privacy</a> • <a href="../legal.html">Cookies</a> • <a href="../legal.html">Algemene voorwaarden</a></div>
-  </div>
-</footer>
-<script>document.getElementById('year').textContent = new Date().getFullYear();</script>
-<script src="../cookie.js"></script>
-<script src="../nav.js"></script>
-
-<div class="sticky-cta"><a class="btn" href="../contact.html">Plan gesprek</a></div>
+  <script>
+    (function(){var y=document.getElementById("year");if(y)y.textContent=new Date().getFullYear();})();
+  </script>
 </body>
 </html>
