--- a/contact.html
+++ b/contact.html
@@ -87,6 +87,8 @@
 </footer>
 <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 <script src="cookie.js"></script>
+<script src="/js/analytics.js" defer></script>
+
 <script src="nav.js"></script>
 
 <div class="sticky-cta"><a class="btn" href="contact.html">Plan gesprek</a></div>
