--- a/index.html
+++ b/index.html
@@ -183,6 +183,8 @@
 
   <!-- Scripts -->
   <script src="/cookie.js" defer></script>
+<script src="/js/analytics.js" defer></script>
+
   <script src="/nav.js" defer></script>
 
 
