--- a/legal.html
+++ b/legal.html
@@ -214,6 +214,8 @@
 
   <!-- Scripts -->
   <script src="/cookie.js" defer></script>
+<script src="/js/analytics.js" defer></script>
+
   <script>
     (function(){
       var y=document.getElementById('year'); if(y) y.textContent=new Date().getFullYear();
